# shmo

./: .gitignore  CMakeLists.txt  README.md  build.sh  distributions.c  distributions.h  main.cpp  mcs.c  random.h  shmosolver.cpp
src/: CMakeLists.txt  arrays.c  arrays.cpp  arrays.h  distributions.c  distributions.cpp  distributions.h  form.c  form.cpp  form.h  main.c  main.cpp  matplotlibcpp.h  mcs.c  mcs.cpp  mcs.h  misc.c  misc.cpp  misc.h  random.c  random.cpp  random.h  rec.c  rec.cpp  recdata.h  shmodata.cpp  shmodata.h  shmosolver.cpp  shmosolver.h
test/: CMakeLists.txt  main.cpp
